# Rust-CRUD

api/: Cargo.toml
api/src/: error.rs  main.rs  middleware.rs  routes.rs  util.rs
api/src/handlers/: auth.rs  bookmark.rs  mod.rs
store/: Cargo.toml  diesel.toml
store/migrations/2025-09-21-190325_create_bookmark_and_user/: up.sql
store/src/: config.rs  lib.rs  schema.rs  store.rs
store/src/models/: bookmark.rs  mod.rs  user.rs
store/src/queries/: bookmark.rs  user.rs
