[package]
name = "store"
version = "0.1.0"
edition = "2024"

[dependencies]
chrono = { version = "0.4.42", features = ["serde"] }
diesel = { version = "2.2.0", features = ["postgres", "chrono", "uuid"] }
uuid = {version = "1.18.1", features = ["v4", "serde"]}
serde = { version = "1.0.180", features = ["derive"] }
dotenvy = "0.15.7"
